Some grammers, words and changed language code

--- a/app/main/i18n/Nook_Japanese.json
+++ b/app/main/i18n/Nook_Japanese.json
@@ -24,7 +24,7 @@
     "clear local files and settings": "設定とダウンロードした音楽を削除",
     "patreon supporters": "Patreonのサポーター",
     "Opens developer's Patreon page": "開発者のPatreonページを開く",
-    "(support me!)": "(私をサポートしてください!)",
+    "(support me!)": "(サポートしてください!)",
     "gold supporters": "ゴールドサポーター",
     "silver supporters": "シルバーサポーター",
     "bronze supporters": "ブロンズサポーター",
@@ -38,10 +38,10 @@
     "offline": "オフライン",
     "{{offlineFiles}}/{{totalFiles}} offline hourly music files downloaded": "{{offlineFiles}}/{{totalFiles}}の1時間毎の音楽がダウンロードされました",
     "{{offlineKKFiles}}/{{totalKKFiles}} offline k.k. music files downloaded": "{{offlineKKFiles}}/{{totalKKFiles}}のとたけけの音楽がダウンロードされました",
-    "download all hourly music": "すべての1時間毎の音楽をダウンロード",
-    "download all k.k. music": "すべてのとたけけの音楽をダウンロード",
+    "download all hourly music": "音楽をダウンロード",
+    "download all k.k. music": "とたけけの音楽をダウンロード",
     "save": "セーブ",
-    "play": "再生"
+    "play": "再生",
     "failedToLoadSound": "音楽の読み込みに失敗しました。",
     "failedToLoadRainSound": "雨の音の読み込みに失敗しました。",
     "Play": "再生",
@@ -53,7 +53,7 @@
     "AC: New Horizons (Switch) [Snowy]": "あつまれ どうぶつの森 (雪)",
     "AC: Pocket Camp (Mobile)": "どうぶつの森 ポケットキャンプ",
     "Play K.K. music on Saturday nights": "土曜日の夜にとたけけの音楽を流す",
-    "Open on startup": "コンピューター起動時にNookを起動する",
+    "Open on startup": "パソコン起動時にNookを起動する",
     "customize k.k. playlist": "とたけけプレイリストをカスタマイズする",
     "customize town tune": "村メロをカスタマイズする",
     "k.k. playlist": "とたけけプレイリスト",
@@ -64,9 +64,9 @@
     "downloading...": "ダウンロード中...",
     "Don't download music": "音楽をダウンロードしない",
     "(saves space, but no offline)": "(容量削減、オフライン機能は使えません)",
-    "tip: you can use the mouse wheel to adjust notes!": "マウスホイールでも音程を調整できます",
+    "tip: you can use the mouse wheel to adjust notes!": "マウスホイールで音程を調整することができます",
     "Nook GitHub": "NookのGitHubページ",
-    "saved!": "セーブされました!",
+    "saved!": "保存されました!",
     "changelog": "変更履歴",
     "AC: Population Growing (GC) [Rainy Day]": "どうぶつの森 [雨の日]"
 }
