--- a/app/main/i18n/Nook_Japanese.json
+++ b/app/main/i18n/Nook_Japanese.json
@@ -31,7 +31,7 @@
     "patreon": "Patreon",
     "(plays once, no loop)": "(ループなし)",
     "Are you sure?": "よろしいですか?",
-    "Click \"OK\" to proceed and delete all local music files and user settings.": "\"OK\"をクリックして、ダウンロードした音楽と設定を削除します",
+    "Click \"OK\" to proceed and delete all local music files and user settings.": "\"OK\"をクリックして、ダウンロードした音楽と設定を削除します。",
     "customize": "カスタマイズ",
     "Enable town tune": "村メロを有効化する",
     "tune settings": "村メロの設定",
@@ -40,7 +40,7 @@
     "{{offlineKKFiles}}/{{totalKKFiles}} offline k.k. music files downloaded": "{{offlineKKFiles}}/{{totalKKFiles}}のとたけけの音楽がダウンロードされました",
     "download all hourly music": "音楽をダウンロード",
     "download all k.k. music": "とたけけの音楽をダウンロード",
-    "save": "セーブ",
+    "save": "保存",
     "play": "再生",
     "failedToLoadSound": "音楽の読み込みに失敗しました。",
     "failedToLoadRainSound": "雨の音の読み込みに失敗しました。",
